<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context="com.example.storeinventoryapp.viewcontroller.ProductEditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_4dp">

            <TextView
                android:id="@+id/text_label_product"
                style="@style/CategoryStyle"
                android:text="@string/label_product_name_detail" />

            <TextView
                android:id="@+id/text_product_name"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_4dp">

            <TextView
                android:id="@+id/text_label_price"
                style="@style/CategoryStyle"
                android:text="@string/label_price_detail" />

            <TextView
                android:id="@+id/text_product_price"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_4dp">

            <TextView
                android:id="@+id/text_label_supplier"
                style="@style/CategoryStyle"
                android:text="@string/label_supplier_detail" />

            <TextView
                android:id="@+id/text_supplier_name"
                style="@style/EditorFieldStyle"
                android:text="@string/label_supplier_detail" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_4dp">

            <TextView
                android:id="@+id/text_label_email"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/label_email_detail" />


            <ImageButton
                android:id="@+id/button_email"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_below="@id/text_label_email"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_email_white_36dp" />

            <TextView
                android:id="@+id/text_supplier_email"
                style="@style/SupplierFieldStyle"
                android:layout_below="@id/text_label_email"
                android:layout_toRightOf="@+id/button_email"
                android:paddingLeft="@dimen/dimen_4dp"
                android:paddingTop="@dimen/activity_margin" />


            <TextView
                android:id="@+id/text_label_phone"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button_email"
                android:paddingTop="@dimen/activity_margin"
                android:text="@string/label_phone_detail" />

            <ImageButton
                android:id="@+id/button_phone"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_below="@+id/text_label_phone"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_contact_phone_white_36dp" />

            <TextView
                android:id="@+id/text_supplier_phone"
                style="@style/SupplierFieldStyle"
                android:layout_below="@+id/text_label_phone"
                android:layout_toRightOf="@id/button_phone"
                android:paddingLeft="@dimen/dimen_4dp"
                android:paddingTop="@dimen/activity_margin" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_label_stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:gravity="center_horizontal"
            android:text="@string/label_quantity_detail"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textsize_15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center_horizontal">

            <ImageButton
                android:id="@+id/button_decrease"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_remove_circle" />

            <TextView
                android:id="@+id/text_stock"
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_toRightOf="@id/button_decrease"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textsize_15sp" />

            <ImageButton
                android:id="@+id/button_increase"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                android:layout_toRightOf="@id/text_stock"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/ic_add_circle_outline_white_36dp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/image_product"
            style="@style/ImageStyle"
            android:layout_marginTop="@dimen/dimen_30dp" />

    </LinearLayout>

</ScrollView>
